--- a/DAW/DIW/tema 2/Practica 6/index.html
+++ b/DAW/DIW/tema 2/Practica 6/index.html
@@ -10,25 +10,34 @@
   <body>
     <h1>Ejercicio Hrml5 y Css3</h1>
     <div>
-        <ul>
-            <li>Noticias</li>
-            <li>Deportes</li>
-            <li>Educacion</li>
-            <li>Ciclo</li>
+        <ul class="menu">
+            <li><a class="css-button-shadow-border-sliding--sand" href="">Noticias</a></li>
+            <li><a class="css-button-shadow-border-sliding--sand" href="">Deportes</a></li>
+            <li><a class="css-button-shadow-border-sliding--sand" href="">Educacion</a></li>
+            <li><a class="css-button-shadow-border-sliding--sand" href="">Ciclo</a></li>
         </ul>
     </div>
-    <div class="contenido"><article> 
+    <div class="Cuerpo">
+      <main>
+        <article> 
         <h2>Noticia 1</h2>
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae inventore magni vel similique quia ex eveniet voluptas, fugiat, quaerat, ratione molestiae? Amet modi corrupti illo temporibus maxime? Dolor minus libero atque tempora officia eum perferendis velit! At nemo quidem labore debitis molestias impedit quam, nisi blanditiis corporis quasi est inventore quisquam, aliquam ut sunt ex fugiat porro asperiores numquam alias. Neque facilis repudiandae accusantium iste, optio repellat? Quae porro esse cum dicta necessitatibus, itaque ab?</p>
-    </article></div>
-    <div class="contenido"><article>
+      </article>
+      <br>
+      <article>
         <h2>Noticia 2</h2>
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae inventore magni vel similique quia ex eveniet voluptas, fugiat, quaerat, ratione molestiae? Amet modi corrupti illo temporibus maxime? Dolor minus libero atque tempora officia eum perferendis velit! At nemo quidem labore debitis molestias impedit quam, nisi blanditiis corporis quasi est inventore quisquam, aliquam ut sunt ex fugiat porro asperiores numquam alias. Neque facilis repudiandae accusantium iste, optio repellat? Quae porro esse cum dicta necessitatibus, itaque ab?</p>
-         </article></div>
-    </article> 
-    <div class="RRSS"></div>
+      </article>
+    </article>
+    </main> 
+    <aside class="lateral">
+        <ul>
+            <li class="rrss"><a href="https://twitter.com/"><img src="img/twitter.png" alt="twitter"></a></li>
+            <li class="rrss"><a href="https://www.facebook.com/"><img src="img/facebook.png" alt="facebook"></a></li>
+        </ul>
+  </div>
   </body>
   <footer>
     <h2>Jose Manuel Lopez Valero</h2>
