--- a/DAW/config/index.html
+++ b/DAW/config/index.html
@@ -1,15 +1,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Estructura ficheros, codigo</title>
+    <title>Estructura ficheros, código</title>
   </head>
   <body>
     <main>
       <article>
         <h1>Configuración y Funcion</h1>
         <p>En esta sección se explica la estructura de ficheros y el código de la aplicación de config.php</p>
-        <p>El siguiente codigo muestra la estructura del fichero de configuración en el cual se encuentra la función de exploración de las carpetas y el listado de estas.</p>
+        <p>El siguiente código muestra la estructura del fichero de configuración en el cual se encuentra la función de exploración de las carpetas y el listado de estas.</p>
         <h4>config.php</h4>
+        <h3>Para usar el código borra todas las ' que encuentres, estan para poder mostralas en el html, si no las borras el código no funcionara</h3>
         <pre class="line-numbers">
 <code class="Languaje-php">function obtener_estructura_directorios($ruta){
     // Se comprueba que realmente sea la ruta de un directorio
@@ -42,7 +43,7 @@
       </article>
         <article>
           <h1>Ejecucion de la funcion</h1>
-          <p>El siguiente codigo muestra como se ejecuta la función de exploración de las carpetas y el listado de estas.</p>
+          <p>El siguiente código muestra como se ejecuta la función de exploración de las carpetas y el listado de estas.</p>
         <h1>Mostrar carpetas</h1>
         <pre class="line-numbers">
 <code class="Languaje-php">//incluimos el fichero de funciones
