--- a/DAW/DIW/tema 2/Practica 9/index.html
+++ b/DAW/DIW/tema 2/Practica 9/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="López" />
-    <style src="css/estilo.css"></style>
+    <link rel="stylesheet" href="css/estilo.css" /> 
     <title>Practica 9</title>
   </head>
   <body>
-    <header></header>
+    <header>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+    </header>
     <nav>
         <ul class="contenedor">
             <li class="op">Opción 1</li>
