--- a/DAW/DIW/tema 2/Practica 9/index.html
+++ b/DAW/DIW/tema 2/Practica 9/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <header>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+        <h1>Header</h1>
     </header>
     <nav>
         <ul class="contenedor">
@@ -23,7 +19,77 @@
             <li class="op">Opción 5</li>
         </ul>
     </nav>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section class="articulo">
+        <article>
+          Titulo
+          <p>
+          Subtitulo
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptates, quod, quia, voluptate quae .
+        </article>
+        <article>
+          Titulo
+          <p>
+          Subtitulo
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptates, quod, quia, voluptate quae .
+        </article>
+        <article>
+          Titulo
+          <p>
+          Subtitulo
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptates, quod, quia, voluptate quae .
+        </article>
+        <article>
+          Titulo
+          <p>
+          Subtitulo
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptates, quod, quia, voluptate quae .
+        </article>
+        <article>
+          Titulo
+          <p>
+          Subtitulo
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptates, quod, quia, voluptate quae .
+        </article>
+        <article>
+          Titulo
+          <p>
+          Subtitulo
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptates, quod, quia, voluptate quae .
+        </article>
+      </section>
+      <section>
+        <article>
+          Archivo
+          <p>
+          <form>
+            <input type="checkbox">Marzo 17</input>
+            <input type="checkbox">Abril 17</input>
+            <input type="checkbox">Mayo 17</input>
+            <input type="checkbox">Junio 17</input>
+            <input type="checkbox">Julio 17</input>
+            <input type="checkbox">Agosto 17</input>
+            <input type="checkbox">Septiembre 17</input>
+            <input type="checkbox">Noviembre 17</input>
+          </form>
+        </article>
+        <article>
+
+        </article>
+      </section>
+    </main>
+    <footer><h2>Nombre y apellidos</h2></footer>
   </body>
 </html>
