Front-end Improve

--- a/lib/cabecera.html
+++ b/lib/cabecera.html
@@ -1,6 +1,6 @@
 <nav>
     <ul class="cabecera-ul">
-        <li><a href="/">Inicio</a></li>
+        <li class="inicio"><a href="/">Inicio</a></li>
         <li><a href="https://github.com/JoseManuelLopezValer0/DAW">Repositorio</a></li>
         <li><a href="mailto:lovajomafidianagmail.com">Contacto</a></li>
     </ul>
