--- a/DAW/DIW/Examenes/Examen 2º trimestre/examen_inicio/index.html
+++ b/DAW/DIW/Examenes/Examen 2º trimestre/examen_inicio/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="López" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/all_fontawesome.min.css" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -11,14 +12,14 @@
     <title></title>
   </head>
   <body>
-    <cabecera> Web Designer Exam </cabecera>
+    <header> Web Designer Exam </header>
     <div class="menu">
       <nav>
         <ul>
-          <li><span class="material-icons">home</span><a href="index.html"> Inicio</a></li>
-          <li><span class="material-icons">looks_one</span><a href="personajes.html"> Personajes</a></li>
-          <li><span class="material-icons">looks_two</span><a href="sagas.html"> Sagas</a></li>
-          <li><span class="material-icons">looks_3</span><a href="armaduras.html"> Fans</a></li>
+          <li><a href="index.html"><span class="material-icons">home</span>Inicio</a></li>
+          <li><a href="personajes.html"><span class="material-icons">looks_one</span>Personajes</a></li>
+          <li><a href="sagas.html"><span class="material-icons">looks_two</span>Sagas</a></li>
+          <li><a href="armaduras.html"><span class="material-icons">looks_3</span>Fans</a></li>
         </ul>
         <a href="index.html"
           ><img src="img\logo_caballeros.png" alt="logo"
@@ -113,8 +114,8 @@
         </p>
       </article>
     </div>
-    <div>
-      <aside class="top_aside">
+    <aside>
+      <div class="top_aside">
         <h2>Top Aside</h2>
         <p>
           A business big enough that it could be listed on the NASDAQ goes belly
@@ -123,8 +124,8 @@
           Skyler. I AM the danger! A guy opens his door and gets shot and you
           think that of me? No. I am the one who knocks!
         </p>
-      </aside>
-      <aside class="middle_aside">
+      </div>
+      <div class="middle_aside">
         <h2>Middle Aside</h2>
         <p>
           No speeches. Short speech. You lost your partner today. What's his
@@ -132,8 +133,8 @@
           your lab. You got nothing. Square one. But you know the business and I
           know the chemistry. I'm thinking... maybe you and I could partner up.
         </p>
-      </aside>
-      <aside class="bottom_aside">
+      </div>
+      <div class="bottom_aside">
         <h2>Bottom Aside</h2>
         <p>
           My partner was about to get himself shot. I intervened. He was angry
@@ -141,8 +142,8 @@
           year-old boy. Then again, maybe he thought it was you who gave the
           order.
         </p>
-      </aside>
-    </div>
+      </div>
+    </aside>
     </section>
     <footer>
       <p>
