--- a/DAW/config/index.html
+++ b/DAW/config/index.html
@@ -53,19 +53,38 @@ function obtener_estructura_directorios($ruta)
                 is_dir($ruta_completa)
                 && $carpeta != "."
                 && $carpeta != ".."
-                && $carpeta != ".git"
-                && $carpeta != "config"
+                && $carpeta != "js"
                 && $carpeta != "css"
                 && $carpeta != "lib"
-                && $carpeta != "icon"
-                && $carpeta != "js"
                 && $carpeta != "img"
-                && $carpeta != "fonts"
-                && $carpeta != "assets"
-                && $carpeta != "data"
                 && $carpeta != "doc"
                 && $carpeta != "app"
+                && $carpeta != "App"
+                && $carpeta != "src"
+                && $carpeta != ".git"
+                && $carpeta != "icon"
+                && $carpeta != "data"
+                && $carpeta != "dist"
+                && $carpeta != "views"
+                && $carpeta != "video"
+                && $carpeta != "fonts"
+                && $carpeta != ".vite"
+                && $carpeta != "config"
+                && $carpeta != "assets"
+                && $carpeta != "my-app"
                 && $carpeta != "vendor"
+                && $carpeta != "public"
+                && $carpeta != "iconos"
+                && $carpeta != "script"
+                && $carpeta != ".github"
+                && $carpeta != "include"
+                && $carpeta != "scripts"
+                && $carpeta != ".vscode"
+                && $carpeta != "modules"
+                && $carpeta != "webfonts"
+                && $carpeta != "imagenes"
+                && $carpeta != "capturas"
+                && $carpeta != "node_modules"
             ) {
                 echo "&lt;li class='lilista'>&lt;a class ='alista'href='$ruta_completa'>&lt;span class='spanlista'>$carpeta&lt;/span>&lt;/a>&lt;/li>";
                 obtener_estructura_directorios($ruta_completa);
